FIX: scrollbar for flight stable now stays within flights boundaries

--- a/drafts/htmx-functionality/two-dropdowns-fade-in/css/htmxFilter.css
+++ b/drafts/htmx-functionality/two-dropdowns-fade-in/css/htmxFilter.css
@@ -13,7 +13,6 @@ body {
 table {
   border-collapse: collapse;
   width: 100%;
-  margin-top: 20px;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
