--- a/drafts/htmx-functionality/two-dropdowns-fade-in/css/tableStyles.css
+++ b/drafts/htmx-functionality/two-dropdowns-fade-in/css/tableStyles.css
@@ -3,7 +3,7 @@
 table {
   width: 100%;
   border-collapse: collapse;
-  margin: 25px 0;
+/*  margin: 25px 0;*/
   font-size: 0.9em;
   font-family: sans-serif;
   min-width: 400px;
